--- a/index.html
+++ b/index.html
@@ -159,13 +159,11 @@
 						<h2>마음 전하기</h2>
 						<hr>
 						신랑 측 계좌번호<br>
-						김창환 신한 000-000-000000<br>
-						김혜경 신한 000-000-000000<br>
-						김동욱 신한 110-307-964960<br>
+						김혜경 신한 110-138-960233<br>
+						김동욱 토스 1000-1782-1353<br>
 						
 						<br>
 						신부 측 계좌번호<br>
-						김한수 신한 000-000-000000<br>
 						명미숙 우리 051-13781602-001<br>
 						김하연 신한 110-486-710120<br>
                     </div>
