edit backgound image

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </div>
         </nav>
         <!-- Header-->
-        <header style="background-image: url('./img/bg.png'); background-size: cover;">
+        <header style="background-image: url('./img/bg.png'); background-size: contain;">
             <div class="container px-4" >
 				
                 <div class="row gx-4 justify-content-center">
