--- a/index.html
+++ b/index.html
@@ -15,15 +15,13 @@
         <link href="css/bootstrap-utilities.rtl.min.css" rel="stylesheet" />
         <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css">-->
         <link href="css/rome.css" rel="stylesheet" />
-        <!--<link href="https://fonts.googleapis.com/css?family=Nanum+Myeongjo:400" rel="stylesheet">-->
+        <link href="https://fonts.googleapis.com/css?family=Nanum+Myeongjo:400" rel="stylesheet">
         <style>
-			@font-face { font-family: 'NanumOeHarMeoNiGeurSsi'; src: url('https://cdn.jsdelivr.net/gh/wooin21/web/fonts/Nanum/NanumOeHarMeoNiGeurSsi.woff') format('woff');
-				/*font-weight: Bold;
-				font-style: normal;*/
-				}
+			/*@font-face { font-family: 'NanumOeHarMeoNiGeurSsi'; src: url('https://cdn.jsdelivr.net/gh/wooin21/web/fonts/Nanum/NanumOeHarMeoNiGeurSsi.woff') format('woff');
+				}*/
 			body {
-		    /*font-family: 'Nanum Myeongjo' !important;*/
-		    font-family: 'NanumOeHarMeoNiGeurSsi' !important;
+		    font-family: 'Nanum Myeongjo' !important;
+		    /*font-family: 'NanumOeHarMeoNiGeurSsi' !important;*/
 		    font-weight: bold !important;
 		    }
 		    
@@ -116,12 +114,18 @@
 						    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
 						    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
 						    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
+						    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5" aria-label="Slide 5"></button>
+						    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="6" aria-label="Slide 5"></button>
+						    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="7" aria-label="Slide 5"></button>
+						    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="8" aria-label="Slide 5"></button>
+						    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="9" aria-label="Slide 5"></button>
+						    <!--<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="10" aria-label="Slide 5"></button>-->
 						  </div>
 						  <div class="carousel-inner">
-						    <div class="carousel-item active">
+						    <!--<div class="carousel-item active">
 						      <img src="./img/1.jpg" class="d-block w-100" alt="...">
-						    </div>
-						    <div class="carousel-item">
+						    </div>-->
+						    <div class="carousel-item active">
 						      <img src="./img/2.jpg" class="d-block w-100" alt="...">
 						    </div>
 						    <!--<div class="carousel-item">
@@ -135,6 +139,24 @@
 						    </div>
 						    <div class="carousel-item">
 						      <img src="./img/6.jpg" class="d-block w-100" alt="...">
+						    </div>
+						    <div class="carousel-item">
+						      <img src="./img/7.jpg" class="d-block w-100" alt="...">
+						    </div>
+						    <div class="carousel-item">
+						      <img src="./img/8.jpg" class="d-block w-100" alt="...">
+						    </div>
+						    <div class="carousel-item">
+						      <img src="./img/9.jpg" class="d-block w-100" alt="...">
+						    </div>
+						    <div class="carousel-item">
+						      <img src="./img/10.jpg" class="d-block w-100" alt="...">
+						    </div>
+						    <div class="carousel-item">
+						      <img src="./img/11.jpg" class="d-block w-100" alt="...">
+						    </div>
+						    <div class="carousel-item">
+						      <img src="./img/12.jpg" class="d-block w-100" alt="...">
 						    </div>
 						  </div>
 						  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -159,12 +181,13 @@
 						<h2>마음 전하기</h2>
 						<hr>
 						신랑 측 계좌번호<br>
+						김창환 SC제일은행 206-20-178072<br>
 						김혜경 신한 110-138-960233<br>
 						김동욱 토스 1000-1782-1353<br>
 						
 						<br>
 						신부 측 계좌번호<br>
-						명미숙 우리 051-13781602-001<br>
+						명미숙 IBK 기업 01036613157<br>
 						김하연 신한 110-486-710120<br>
                     </div>
                 </div>
