--- a/index.html
+++ b/index.html
@@ -22,13 +22,16 @@
 			body {
 		    font-family: 'Nanum Myeongjo' !important;
 		    /*font-family: 'NanumOeHarMeoNiGeurSsi' !important;*/
-		    font-weight: bold !important;
+		    /*font-weight: bold !important;*/
 		    }
 		    
 		    
 			section {
 			  padding-top: 3rem;
 			  padding-bottom: 3rem;
+			}
+			.lead {
+				font-size: 1.1rem;
 			}
 		</style>
     </head>
