--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
 							이 두 사람을 아끼고 돌봐주신<br>
 							여러 어른과 친지분들을 모시고<br>
 							서약을 맺고자 하오니<br>
-							두 사람의 장래를<br>
-							축복해주시면 고맙겠습니다.
+							저희의 앞날을 축복해 주시고<br>
+							격려해 주시면 더없는 기쁨이 되겠습니다.
 						</p>
 						
 						<h4>김창환ㆍ김혜경 아들 동욱</h4>
