--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 						
 						<br>
 						신부 측 계좌번호<br>
-						명미숙 IBK 기업 01036613157<br>
+						명미숙 IBK 기업 010-3661-3157<br>
 						김하연 신한 110-486-710120<br>
                     </div>
                 </div>
