--- a/index.html
+++ b/index.html
@@ -122,26 +122,11 @@
 						    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="7" aria-label="Slide 5"></button>
 						    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="8" aria-label="Slide 5"></button>
 						    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="9" aria-label="Slide 5"></button>
-						    <!--<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="10" aria-label="Slide 5"></button>-->
+						    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="10" aria-label="Slide 5"></button>
 						  </div>
 						  <div class="carousel-inner">
-						    <!--<div class="carousel-item active">
-						      <img src="./img/1.jpg" class="d-block w-100" alt="...">
-						    </div>-->
 						    <div class="carousel-item active">
-						      <img src="./img/2.jpg" class="d-block w-100" alt="...">
-						    </div>
-						    <!--<div class="carousel-item">
-						      <img src="./img/3.jpg" class="d-block w-100" alt="...">
-						    </div>-->
-						    <div class="carousel-item">
-						      <img src="./img/4.jpg" class="d-block w-100" alt="...">
-						    </div>
-						    <div class="carousel-item">
-						      <img src="./img/5.jpg" class="d-block w-100" alt="...">
-						    </div>
-						    <div class="carousel-item">
-						      <img src="./img/6.jpg" class="d-block w-100" alt="...">
+						      <img src="./img/1.jpg" class="d-block w-100" alt="...">
 						    </div>
 						    <div class="carousel-item">
 						      <img src="./img/7.jpg" class="d-block w-100" alt="...">
@@ -160,6 +145,18 @@
 						    </div>
 						    <div class="carousel-item">
 						      <img src="./img/12.jpg" class="d-block w-100" alt="...">
+						    </div>
+						    <div class="carousel-item">
+						      <img src="./img/2.jpg" class="d-block w-100" alt="...">
+						    </div>
+						    <div class="carousel-item">
+						      <img src="./img/4.jpg" class="d-block w-100" alt="...">
+						    </div>
+						    <div class="carousel-item">
+						      <img src="./img/5.jpg" class="d-block w-100" alt="...">
+						    </div>
+						    <div class="carousel-item">
+						      <img src="./img/6.jpg" class="d-block w-100" alt="...">
 						    </div>
 						  </div>
 						  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
